--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -22,11 +22,43 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="categories">
                 <span class="oi oi-plus" aria-hidden="true"></span> Manage Categories
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="customers">
+                <span class="oi oi-plus" aria-hidden="true"></span> Manage Customers
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ordercustomers">
+                <span class="oi oi-plus" aria-hidden="true"></span> Manage OrderCustomer
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="products">
+                <span class="oi oi-plus" aria-hidden="true"></span> Manage Products
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ordervendors">
+                <span class="oi oi-plus" aria-hidden="true"></span> Manage OrderVendors
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="vendors">
+                <span class="oi oi-plus" aria-hidden="true"></span> Manage Vendors
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
