--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -31,31 +31,31 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="customers">
-                <span class="oi oi-plus" aria-hidden="true"></span> Manage Customers
+                <span class="oi oi-plus" aria-hidden="true"></span> Customers
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="ordercustomers">
-                <span class="oi oi-plus" aria-hidden="true"></span> Manage OrderCustomer
+                <span class="oi oi-plus" aria-hidden="true"></span> OrderCustomer
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="products">
-                <span class="oi oi-plus" aria-hidden="true"></span> Manage Products
+                <span class="oi oi-plus" aria-hidden="true"></span> Products
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="ordervendors">
-                <span class="oi oi-plus" aria-hidden="true"></span> Manage OrderVendors
+                <span class="oi oi-plus" aria-hidden="true"></span> OrderVendors
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="vendors">
-                <span class="oi oi-plus" aria-hidden="true"></span> Manage Vendors
+                <span class="oi oi-plus" aria-hidden="true"></span> Vendors
             </NavLink>
         </li>
 
