--- a/WebApp/Pages/Category/AddCategoryComponent.razor
+++ b/WebApp/Pages/Category/AddCategoryComponent.razor
@@ -38,7 +38,7 @@
     }
     private void OnValidSubmit()
     {
-        AddCategoryUseCase.Excecute(category);
+        AddCategoryUseCase.Execute(category);
         NavigationManager.NavigateTo("/categories");
     }
 
