--- a/WebApp/Pages/Customer/AddCustomerComponent.razor
+++ b/WebApp/Pages/Customer/AddCustomerComponent.razor
@@ -63,7 +63,7 @@
     }
     private void OnValidSubmit()
     {
-        AddCustomerUseCase.Excecute(customer);
+        AddCustomerUseCase.Execute(customer);
         NavigationManager.NavigateTo("/customers");
     }
 
