--- a/WebApp/Pages/OrderCustomer/AddOrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/AddOrderCustomerComponent.razor
@@ -38,7 +38,7 @@
     }
     private void OnValidSubmit()
     {
-        AddOrderCustomerUseCase.Excecute(orderCustomer);
+        AddOrderCustomerUseCase.Execute(orderCustomer);
         NavigationManager.NavigateTo("/ordercustomers");
     }
 
