--- a/WebApp/Pages/Product/AddProductComponent.razor
+++ b/WebApp/Pages/Product/AddProductComponent.razor
@@ -63,7 +63,7 @@
     }
     private void OnValidSubmit()
     {
-        AddProductUseCase.Excecute(product);
+        AddProductUseCase.Execute(product);
         NavigationManager.NavigateTo("/products");
     }
 
