--- a/WebApp/Pages/Customer/EditCustomerComponent.razor
+++ b/WebApp/Pages/Customer/EditCustomerComponent.razor
@@ -70,7 +70,7 @@
         base.OnParametersSet();
         if (int.TryParse(this.CustomerId, out int iCustomerId)) 
         {
-            this.customer = GetCustomerByIdUseCase.Excecute(iCustomerId);
+            this.customer = GetCustomerByIdUseCase.Execute(iCustomerId);
         }
 
     }
