--- a/WebApp/Pages/OrderVendor/AddOrderVendorComponent.razor
+++ b/WebApp/Pages/OrderVendor/AddOrderVendorComponent.razor
@@ -38,7 +38,7 @@
     }
     private void OnValidSubmit()
     {
-        AddOrderVendorUseCase.Excecute(orderVendor);
+        AddOrderVendorUseCase.Execute(orderVendor);
         NavigationManager.NavigateTo("/ordervendors");
     }
 
