--- a/WebApp/Pages/Product/EditProductComponent.razor
+++ b/WebApp/Pages/Product/EditProductComponent.razor
@@ -4,6 +4,7 @@
 @inject NavigationManager NavigationManager
 @inject IEditProductUseCase EditProductUseCase
 @inject IGetProductByIdUseCase GetProductByIdUseCase 
+@inject ViewCategoriesUseCase ViewCategoriesUseCase
 
 <h3>Edit Product</h3>
 
@@ -23,6 +24,27 @@
             <InputText id="description" @bind-Value="product.Description" class="form-control"></InputText>
         </div>
 
+        <div class="form-group">
+            <label for="category">Category </label>
+            <select id="category" @bind="product.CategoryId" class="form-control">
+                <option selected></option>
+                @foreach(var cat in categories)
+                {
+                    <option value="@cat.СategoryId">@cat.Name</option>
+                }
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="price">Price</label>
+            <InputNumber id="price" @bind-Value="product.Price" @bind-Value:format="F2" class="form-control"></InputNumber>
+        </div>
+
+        <div class="form-group">
+            <label for="qty">Quantity</label>
+            <InputNumber id="qty" @bind-Value="product.Quantity" class="form-control"></InputNumber>
+        </div>
+
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-primary" @onclick="OnCansel">Cansel</button>
     </EditForm>
@@ -33,11 +55,13 @@
     public string ProductId { get; set; }
 
     private Product product;
+    private IEnumerable<Category> categories;
 
     protected override void OnInitialized()
     {
         base.OnInitialized();
         product = new Product();
+        categories = ViewCategoriesUseCase.Execute();
     }
 
     protected override void OnParametersSet()
