--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -42,8 +42,8 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="products">
-                <span class="oi oi-plus" aria-hidden="true"></span> Products
+            <NavLink class="nav-link" href="itemorders">
+                <span class="oi oi-plus" aria-hidden="true"></span> ItemOrders
             </NavLink>
         </li>
 
@@ -56,6 +56,12 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="vendors">
                 <span class="oi oi-plus" aria-hidden="true"></span> Vendors
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="products">
+                <span class="oi oi-plus" aria-hidden="true"></span> Products
             </NavLink>
         </li>
 
