--- a/WebApp/Pages/OrderVendor/EditOrderVendorComponent.razor
+++ b/WebApp/Pages/OrderVendor/EditOrderVendorComponent.razor
@@ -20,7 +20,7 @@
 
         <div class="form-group">
             <label for="description">Description</label>
-            <InputText id="description" @bind-Value="orderVendor.Description" class="form-control"></InputText>
+            <InputTextArea id="description" @bind-Value="orderVendor.Description" class="form-control"></InputTextArea>
         </div>
 
         <button type="submit" class="btn btn-primary">Save</button>
