--- a/WebApp/Pages/Customer/EditCustomerComponent.razor
+++ b/WebApp/Pages/Customer/EditCustomerComponent.razor
@@ -20,7 +20,7 @@
 
         <div class="form-group">
             <label for="description">Description</label>
-            <InputText id="description" @bind-Value="customer.Description" class="form-control"></InputText>
+            <InputTextArea id="description" @bind-Value="customer.Description" class="form-control"></InputTextArea>
         </div>
 
         <div class="form-group">
@@ -72,7 +72,6 @@
         {
             this.customer = GetCustomerByIdUseCase.Execute(iCustomerId);
         }
-
     }
 
     private void OnValidSubmit()
