--- a/WebApp/Pages/ItemOrder/ItemOrdersComponent.razor
+++ b/WebApp/Pages/ItemOrder/ItemOrdersComponent.razor
@@ -15,6 +15,7 @@
         <table class="table" id="myTable">
             <thead>
                 <tr>
+                    <th></th>
                     <th>Product</th>
                     <th>Description</th>
                     <th>Quantity</th>
@@ -29,6 +30,9 @@
                 @foreach(var itemOrder in itemOrders)
                 {
                     <tr>
+                        <th>
+                            <InputCheckbox></InputCheckbox>
+                        </th>
                         <th>
                             <a href="/product/@itemOrder.ProductId">
                                 @GetProductByIdUseCase.Execute(itemOrder.ProductId)?.Name
