--- a/WebApp/Pages/OrderCustomer/AddOrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/AddOrderCustomerComponent.razor
@@ -19,8 +19,15 @@
 
         <div class="form-group">
             <label for="description">Description</label>
-            <InputText id="description" @bind-Value="orderCustomer.Description" class="form-control"></InputText>
+            <InputTextArea id="description" @bind-Value="orderCustomer.Description" class="form-control"></InputTextArea>
         </div>
+
+        <div class="form-group">
+            <label for="description">Description</label>
+            <InputFile OnChange="@LoadFiles" multiple />
+        </div>
+
+
 
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-primary" @onclick="OnCansel">Cansel</button>
@@ -45,5 +52,10 @@
     private void OnCansel()
     {
         NavigationManager.NavigateTo("/ordercustomers");
+    }
+
+    private void LoadFiles(InputFileChangeEventArgs e)
+    {
+
     }
 }
