--- a/WebApp/Pages/Product/AddProductComponent.razor
+++ b/WebApp/Pages/Product/AddProductComponent.razor
@@ -20,7 +20,7 @@
 
         <div class="form-group">
             <label for="description">Description</label>
-            <InputText id="description" @bind-Value="product.Description" class="form-control"></InputText>
+            <InputTextArea id="description" @bind-Value="product.Description" class="form-control"></InputTextArea>
         </div>
 
         <div class="form-group">
