--- a/WebApp/Pages/ItemOrder/AddItemOrderComponent.razor
+++ b/WebApp/Pages/ItemOrder/AddItemOrderComponent.razor
@@ -8,7 +8,7 @@
 @inject IViewOrderCustomersUseCase ViewOrderCustomersUseCase
 @inject IViewOrderVendorsUseCase ViewOrderVendorsUseCase
 
-<h3>Add ItemOrder</h3>
+<h3>Добавить товар в заказ</h3>
 
 @if (itemOrder != null)
 {
