--- a/WebApp/Pages/ItemOrder/EditItemOrderComponent.razor
+++ b/WebApp/Pages/ItemOrder/EditItemOrderComponent.razor
@@ -9,7 +9,8 @@
 @inject IViewOrderCustomersUseCase ViewOrderCustomersUseCase
 @inject IViewOrderVendorsUseCase ViewOrderVendorsUseCase
 
-<h3>Edit ItemOrder</h3>
+<h3>Редактировать товары в заказе</h3>
+<h3>Редактировать товары в заказе</h3>
 
 @if(itemOrder != null)
 {
