--- a/WebApp/Pages/Customer/AddCustomerComponent.razor
+++ b/WebApp/Pages/Customer/AddCustomerComponent.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 @inject IAddCustomerUseCase AddCustomerUseCase 
 
-<h3>Add Customer</h3>
+<h3>Редактирование клиента</h3>
 
 @if (customer != null)
 {
@@ -13,22 +13,22 @@
         <ValidationSummary></ValidationSummary>
 
         <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name">Login</label>
             <InputText id="name" @bind-Value="customer.Name" class="form-control"></InputText>
         </div>
 
         <div class="form-group">
-            <label for="description">Description</label>
+            <label for="description">Описание</label>
             <InputTextArea id="description" @bind-Value="customer.Description" class="form-control"></InputTextArea>
         </div>
 
         <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Пароль</label>
             <InputText id="password" @bind-Value="customer.Password" class="form-control"></InputText>
         </div>
 
         <div class="form-group">
-            <label for="fullname">Fullname</label>
+            <label for="fullname">ФИО</label>
             <InputText id="fullname" @bind-Value="customer.Fullname" class="form-control"></InputText>
         </div>
 
@@ -38,17 +38,17 @@
         </div>
 
         <div class="form-group">
-            <label for="company">Company</label>
+            <label for="company">Организация</label>
             <InputText id="company" @bind-Value="customer.Company" class="form-control"></InputText>
         </div>
 
         <div class="form-group">
-            <label for="phone">Phone</label>
+            <label for="phone">Телефон</label>
             <InputText id="phone" @bind-Value="customer.Phone" class="form-control"></InputText>
         </div>
 
-        <button type="submit" class="btn btn-primary">Save</button>
-        <button type="button" class="btn btn-primary" @onclick="OnCansel">Cansel</button>
+        <button type="submit" class="btn btn-primary">Сохранить</button>
+        <button type="button" class="btn btn-primary" @onclick="OnCansel">Отменить</button>
     </EditForm>
 }
 
