--- a/WebApp/Pages/Customer/EditCustomerComponent.razor
+++ b/WebApp/Pages/Customer/EditCustomerComponent.razor
@@ -5,7 +5,7 @@
 @inject IEditCustomerUseCase EditCustomerUseCase
 @inject IGetCustomerByIdUseCase GetCustomerByIdUseCase 
 
-<h3>Edit Customer</h3>
+<h3>Редактирование клиента</h3>
 
 @if(customer != null)
 {
