--- a/WebApp/Pages/_Host.cshtml
+++ b/WebApp/Pages/_Host.cshtml
@@ -13,11 +13,14 @@
     <title>WebApp</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/igniteui.blazor/material.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="WebApp.styles.css" rel="stylesheet" />
 
     <!--https://www.datatables.net/examples/basic_init/zero_configuration.html -->
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  
 <script>
     $(document).ready( function () {
         $('#myTable').DataTable();
