--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -30,40 +30,42 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="products">
+                <span class="oi oi-plus" aria-hidden="true"></span> Products
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="customers">
-                <span class="oi oi-plus" aria-hidden="true"></span> Customers
+                <span class="oi oi-plus" aria-hidden="true"></span> Клиенты
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="ordercustomers">
-                <span class="oi oi-plus" aria-hidden="true"></span> OrderCustomer
+                <span class="oi oi-plus" aria-hidden="true"></span> Заказы клиентов
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="itemorders">
-                <span class="oi oi-plus" aria-hidden="true"></span> ItemOrders
+                <span class="oi oi-plus" aria-hidden="true"></span> Товары в заказах
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="ordervendors">
-                <span class="oi oi-plus" aria-hidden="true"></span> OrderVendors
+                <span class="oi oi-plus" aria-hidden="true"></span> Заказы поставщиков
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="vendors">
-                <span class="oi oi-plus" aria-hidden="true"></span> Vendors
+                <span class="oi oi-plus" aria-hidden="true"></span> Поставщики
             </NavLink>
         </li>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="products">
-                <span class="oi oi-plus" aria-hidden="true"></span> Products
-            </NavLink>
-        </li>
+
 
     </ul>
 </div>
