--- a/WebApp/comp/CustomerWidgetComponent.razor
+++ b/WebApp/comp/CustomerWidgetComponent.razor
@@ -1,13 +1,13 @@
-﻿@page "/customers"
-
-@inject NavigationManager NavigationManager
+﻿@inject NavigationManager NavigationManager
 @inject UseCases.IViewCustomersUseCase ViewCustomersUseCase
 @inject UseCases.IDeleteCustomerUseCase DeleteCustomerUseCase
 
-<h3>Клиенты</h3>
+<div>
+    <h3>CustomerWidgetComponent</h3> 
+    <i class="fa fa-plus" aria-hidden="true"></i>
+    <br/>
+    <h2>Покупатели</h2><br/>
 
-@if(customers != null)
-{
         <table class="table" id="myTable">
             <thead>
                 <tr>
@@ -23,29 +23,27 @@
                         <td>@customer.Name</td>
                         <td>@customer.Description</td>
                         <td>
-                            <button tupe="button" @onclick="@(() => EditCustomer(customer))" class="btn btn-light">Edit</button>
-                            <button tupe="button" @onclick="@(() => DeleteCustomer(customer.СustomerId))" class="btn btn-light">Delete</button>
+                            <button tupe="button" @onclick="@(() => EditCustomer(customer))" class="btn btn-light">
+                                <i class="fas fa-edit"></i>
+                            </button>
+                            <button tupe="button" @onclick="@(() => DeleteCustomer(customer.СustomerId))" class="btn btn-light">
+                                <i class="far fa-trash-alt"></i>
+                            </button>
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
-        <br/>
-        <button type="button" @onclick="OnClickAddCustomer" class="btn btn-primary">Add Customer</button>
-}
+    </div>
 
 @code {
+
     private List<Customer> customers;
 
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        customers = ViewCustomersUseCase.Execute()?.ToList();
-    }
-
-    protected void OnClickAddCustomer()
-    {
-        NavigationManager.NavigateTo("/addcustomer");
+        LoadCustomers();
     }
 
     protected void EditCustomer(Customer customer)
