fixed bug in OrderCustomerComponent

--- a/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
+++ b/WebApp/Pages/OrderCustomer/OrderCustomerComponent.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager NavigationManager
 @inject IViewOrderCustomersUseCase ViewOrderCustomersUseCase
 @inject IDeleteOrderCustomerUseCase DeleteOrderCustomerUseCase
-@inject IGetExcelFileByIdUseCase GetCustomerByIdUseCase 
+@inject IGetCustomerByIdUseCase GetCustomerByIdUseCase 
 @inject IGetExcelFileByIdUseCase GetExcelFileByIdUseCase 
 
 <h3>Manage OrderCustomer</h3>
